# techdoc-experiment

./: .env  IMPLEMENTATION_GUIDE.md  README.md  ai-agent-config.json  check_entities.py  cleanup_entities.py  create_ai_agent.py  custom_search.py  ingest_docs.py  port-docs-blueprint.json  pyproject.toml  quick_start.py  repositories.toml  requirements.txt  setup_credentials.py  test_ai_agent.py  test_search.py
docs/guides/all/: change-on-call-user.md  create-humanitec-application.md  create-workload-profile.md  delete-humanitec-application.md  deploy-humanitec-application.md  humanitec-integration.md  pull-request-metrics.md  restart-argocd-app.md  sync-argocd-app.md
docs/guides/templates/humanitec/: _humanitec_application_blueprint.mdx  _humanitec_environment_blueprint.mdx  _humanitec_exporter_cache.mdx  _humanitec_exporter_humanitec_client.mdx  _humanitec_exporter_main.mdx  _humanitec_exporter_port_client.mdx  _humanitec_exporter_requirements.mdx  _humanitec_resource_blueprint.mdx  _humanitec_resource_graph_blueprint.mdx  (+1 more)
sample_docs/: api-reference.md  getting-started.md  troubleshooting.md
scripts/: check_status.py  cleanup_entities.py  create_ai_agent.py  custom_search.py  ingest_local_docs.py  ingest_remote_readmes.py  setup_credentials.py  test_ai_agent.py
src/port_tools/: ingester.py
src/port_tools/ai_agent/: manager.py
src/port_tools/clients/: port_client.py
src/port_tools/fetchers/: git_fetcher.py  local_fetcher.py
src/port_tools/parsers/: doc_parser.py
src/port_tools/search/: bot.py
tests/: test_doc_parser.py
(+10 files in other folders)
